# Necromunda-Game-Manager

./: .gitignore  .replit  README.md  app.py  backup_manager.py  campaign_data.json  common.py  create_grid.py  groq_test.py  main.py  pyproject.toml  quantity.csv  replit.nix  tile_server.py
backups/backup_20250224_183327/territories/: Black Market.json  Gas Fields.json
backups/backup_20250224_183536/gangs/: 7cadd387-47fa-41ba-ac74-d93d30a8fa9a.json
backups/backup_20250224_184444/territories/: Dig Site.json
backups/backup_20250224_184535/gangs/: 483979.json
backups/backup_20250224_184827/gangs/: 485755.json
backups/backup_20250224_185418/gangs/: 218787.json
backups/backup_20250224_185543/battles/: db739a73-6d5b-4fda-9158-d220e0cef6ed.json
backups/backup_20250224_191106/gangs/: 467746.json
backups/backup_20250224_202613/gangs/: 407538.json
pages/: 1_Dashboard.py  2_Gangs.py  3_Territories.py  4_Battles.py  5_ExportCampaign.py  7_Equipment.py  8_ImportYaktribe.py  FighterDetails.py  Home.py
prompt_templates/: equipment_gen.py  gang_gen.py  scenario_gen.py  territory_gen.py
utils/: logger.py
views/: 0_Rebuild_Campaign.py  10_MapGenerator.py  11_MermaidCharts.py  1_Dashboard.py  2_Gangs.py  3_Territories.py  4_Battles.py  5_FighterManagement.py  6_InteractivemMap.py  7_Equipment.py  9_GangsDataFrame.py  Home.py  Rebuild_Campaign.py
