[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
streamlit = "^1.27.2"
pandas = "^2.2.2"
numpy = "2.0.0"
matplotlib = "^3.9.1"
pyairtable = "3.0.1"
streamlit-plotly-events = "0.0.6"
streamlit-option-menu = "0.4.0"
streamlit-pydantic = "0.6.0"
streamlit-drawable-canvas = "0.9.3"
streamlit-agraph = "0.0.45"
streamlit-extras = "0.5.0"
streamlit-chat = "0.1.1"
stqdm = "0.0.5"
streamlit-elements = "0.1.0"
plotly = "5.24.1"
pyarrow = "18.1.0"
pydantic = "^2.10.6"
folium = "^0.19.4"
streamlit-folium = "^0.24.0"
streamlit-visgraph = "^0.2.3"
streamlit-d3graph = "^1.0.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
rich = "^13.9.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"